# cl_server_store_service

./: .gitignore  ARCHITECTURE.md  AUTHENTICATION_TESTS_ANALYSIS.md  INTERNALS.md  README.md  REVIEW.md  ReviewRequest.md  alembic.ini  check_config.py  common.sh  m_insight_test_analysis.md  main.py  pyproject.toml  pyproject.toml.sample  pyproject.toml2  pyrightconfig.json  start.sh
.zed/: settings.json
alembic/: env.py
alembic/versions/: 00268ae3f7cc_add_image_path_and_version_to_.py  030212b28f26_initial_schema_with_sidecar_intelligence.py  0e06b756fe80_add_m_insight_tables.py  1577beb508d6_denormalize_intelligence_data.py  1fadc3d0714e_initial.py  29efb0505bd6_initial.py  2cdb67716137_reset_and_standardize_job_schema.py  5acba6ba7863_remove_face_match_table.py  5e8c9d741f3a_add_face_detection_and_entity_jobs_tables.py  6d29391ba950_consolidate_models_and_add_job_tracking.py  6e60b3300bcd_add_known_person_and_face_matches.py  7662b31daa39_initial.py  a8181ccb4efa_initial_schema_from_current_models.py  bee9c3df9036_initial_schema.py  e52a818f09f0_standardize_intelligence_table_rename_.py  f9cbf73e83ae_initial_schema_with_all_tables.py
docs/: db_service_architecture.md  entity_deletion_plan.md
src/: __init__.py  auth.py  capability_manager.py  config.py  config_service.py  database.py  file_storage.py  models.py  mqtt_client.py  old_database.py  routes.py  schemas.py  service.py  versioning.py
src/store/: __init__.py  auth.py  capability_manager.py  compute_singleton.py  config.py  config_service.py  database.py  entity_storage.py  face_store_singleton.py  job_callbacks.py  job_service.py  m_insight_worker.py  main.py  media_metadata.py  models.py  pysdk_config.py  qdrant_image_store.py  qdrant_singleton.py  routes.py  schemas.py  service.py  store.py  store_interface.py  utils.py  versioning.py
src/store/broadcast_service/: broadcaster.py  monitor.py  schemas.py
src/store/common/: __init__.py  auth.py  config.py  database.py  models.py  schemas.py  storage.py  utils.py  versioning.py
src/store/compute/: __init__.py  models.py  plugins.py  routes.py  schemas.py  service.py
src/store/db_service/: __init__.py  base.py  config.py  database.py  db_internals.py  db_service.py  dependencies.py  entity.py  exceptions.py  face.py  intelligence.py  models.py  schemas.py  sync.py
src/store/intelligence/: routes.py  service.py
src/store/intelligence/logic/: qdrant_image_store.py  qdrant_singleton.py
src/store/m_insight/: __init__.py  broadcaster.py  config.py  dependencies.py  job_callbacks.py  job_service.py  media_insight.py  models.py  processing_service.py  retrieval_service.py  routes.py  schemas.py  vector_stores.py  worker.py
src/store/m_insight/intelligence/: models.py  retrieve_service.py  routes.py  schemas.py  service.py
src/store/m_insight/intelligence/logic/: compute_singleton.py  dino_store_singleton.py  face_store_singleton.py  job_callbacks.py  job_service.py  pysdk_config.py  store_interface.py
src/store/store/: audit_service.py  config.py  config_service.py  dependencies.py  face_service.py  media_metadata.py  media_thumbnail.py  monitor.py  routes.py  service.py  store.py
src/store/vectorstore_services/: exceptions.py  schemas.py  vector_stores.py
tests/: PLUGINS.md  QUICK.md  README.md  conftest.py  generate_test_images.py  test_admin_endpoints.py  test_authentication.py  test_cascade_deletion.py  test_comprehensive_metadata.py  test_config.py  test_database.py  test_duplicate_detection.py  test_entity_crud.py  test_entity_validation.py  test_file_storage.py  test_file_upload.py  test_files.txt  test_health_check.py  test_integration_dependency.py  test_job_admin.py  test_job_auth.py  test_job_capabilities.py  test_job_crud.py  test_m_insight_mqtt.py  test_m_insight_worker.py  test_media_files.py  test_media_metadata_unit.py  test_mqtt_broadcast.py  test_pagination.py  test_plugin_image_conversion.py  test_plugin_image_resize.py  test_plugin_routes.py  test_plugin_template.py.template  test_put_endpoint.py  test_runtime_config.py  test_unified_permissions.py  test_user_tracking.py  test_versioning.py
tests/test_integration/: conftest.py  test_admin_endpoints.py  test_authentication.py  test_comprehensive_metadata.py  test_config.py  test_duplicate_detection.py  test_entity_crud.py  test_entity_validation.py  test_file_storage.py  test_file_upload.py  test_files.txt  test_integration_dependency.py  test_pagination.py  test_put_endpoint.py  test_runtime_config.py  test_user_tracking.py  test_versioning.py
tests/test_intelligence/test_integration/: test_intelligence_routes.py
tests/test_store/test_db_service/: conftest.py  test_cascade.py  test_entity.py  test_entity_version.py  test_face.py  test_face_count.py  test_face_serialization.py  test_intelligence.py  test_intelligence_lazy_init.py  test_sync.py
tests/test_store/test_integration/: __init__.py  conftest.py  test_admin_endpoints.py  test_authentication.py  test_broadcaster.py  test_callback_failures.py  test_comprehensive_metadata.py  test_database.py  test_duplicate_detection.py  test_entity_crud.py  test_entity_validation.py  test_file_storage.py  test_file_upload.py  test_health_check.py  test_integration_dependency.py  test_intelligence_routes.py  test_job_processing.py  test_job_service.py  test_m_insight_image_embedding_flow.py  test_m_insight_processor_jobs.py  test_media_metadata_unit.py  test_monitor.py  test_pagination.py  test_processing_service.py  test_put_endpoint.py  test_retrieve_service.py  test_runtime_config.py  test_store_delete.py  test_user_tracking.py  test_utils_integration.py  test_versioning.py
tests/test_store/test_m_insight/: test_retrieval_service.py  test_schema_replacement.py
tests/test_store/test_store_service/: test_face_service_fix.py
typings/sqlalchemy_continuum/: __init__.pyi
