
[project]
name = "store"
version = "0.1.0"
description = "FastAPI-based microservice for managing media entities"
authors = [
    { name = "Ananda Sarangaram", email = "4833102+asarangaram@users.noreply.github.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.124.2,<0.125.0",
    "uvicorn[standard]>=0.38.0,<0.39.0",
    "python-multipart>=0.0.20,<0.0.21",
    "sqlalchemy>=2.0.45,<3.0.0",
    "alembic>=1.17.2,<2.0.0",
    "sqlalchemy-continuum>=1.5.2,<2.0.0",
    "marshmallow>=4.1.1,<5.0.0",
    "werkzeug>=3.1.4,<4.0.0",
    "m3u8>=6.0.0,<7.0.0",
    "python-magic>=0.4.27,<0.5.0",
    "requests>=2.32.5,<3.0.0",
    "paho-mqtt>=2.1.0,<3.0.0",
    # Git dependencies (uv supports this exactly like this)
    "cl-ml-tools@git+https://github.com/cloudonlanapps/cl_ml_tools.git",
    "cl-server-shared@git+https://github.com/cloudonlanapps/cl_server_shared.git",
    "clmediakit@git+https://github.com/asarangaram/clmediakit.git",
    "basedpyright>=1.36.1",
]

# -------- Dependency groups (uv supports PEP 735 syntax) ----------
[dependency-groups]
dev = [
    "pytest>=9.0.2,<10.0.0",
    "httpx>=0.28.1,<0.29.0",
    "python-jose[cryptography]>=3.5.0,<4.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "pytest-cov>=7.0.0,<8.0.0"
]

# -------- Scripts (Poetry → uv conversion) ----------
# uv supports PEP 621 scripts natively
[project.scripts]
store = "store.main:main"

# -------- Build system (can stay; uv works with poetry-core) ----------
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# -------- Your pytest + coverage config stays untouched ----------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short -m 'not integration'"
markers = [
    "integration: marks tests as integration tests that reload modules (deselect with '-m \"not integration\"')",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/conftest.py"]

# -------- pyright config stays as-is ----------
[tool.pyright]
venvPath = "."
venv = ".venv"
