
[project]
name = "cl-server-store"
version = "0.1.0"
description = "FastAPI-based microservice for managing media entities, jobs"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    {name = "Ananda Sarangaram"}
]
keywords = ["media", "store", "job", ]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.124.2,<0.125.0",
    "uvicorn[standard]>=0.38.0,<0.39.0",
    "python-multipart>=0.0.20,<0.0.21",
    "sqlalchemy>=2.0.45,<3.0.0",
    "alembic>=1.17.2,<2.0.0",
    "sqlalchemy-continuum>=1.5.2,<2.0.0",
    "marshmallow>=4.1.1,<5.0.0",
    "werkzeug>=3.1.4,<4.0.0",
    "m3u8>=6.0.0,<7.0.0",
    "python-magic>=0.4.27,<0.5.0",
    "requests>=2.32.5,<3.0.0",
    "paho-mqtt>=2.1.0,<3.0.0",
    "basedpyright>=1.36.1",
    # Git dependencies (uv supports this exactly like this)
    "cl-ml-tools@git+https://github.com/cloudonlanapps/cl_ml_tools.git",
    "cl-server-shared@git+https://github.com/cloudonlanapps/cl_server_shared.git",
    "clmediakit@git+https://github.com/asarangaram/clmediakit.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "httpx>=0.24",
    "python-jose[cryptography]>=3.5.0,<4.0.0",
]
all = [
    "cl_server_store[dev]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cl_server_store"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
addopts = "--cov=cl_ml_tools --cov-report=html --cov-report=term-missing --cov-fail-under=90"

# Custom test storage directory (optional, overridden by TEST_STORAGE_DIR env var)
test_storage_base_dir = "/tmp/cl_server_store_test_storage"

[tool.coverage.run]
source = ["src/cl_server_store"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "*/typings/*"
]

[tool.coverage.report]
precision = 2
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "F811", "F401"]
ignore = ["E501"]
