[project]
name = "store"
version = "0.1.0"
description = "Media entity management and compute job orchestration microservice"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    {name = "Ananda Sarangaram"}
]
keywords = ["media", "storage", "compute", "jobs", "fastapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "alembic>=1.17.2",
    "basedpyright>=1.36.1",
    "cl-ml-tools",
    "cl-server-shared",
    "fastapi>=0.127.0",
    "marshmallow>=4.1.2",
    "pydantic>=2.12.5",
    "pytest-asyncio[dev]>=1.3.0",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.45",
    "sqlalchemy-continuum>=1.4.2",
    "uvicorn>=0.40.0",
    "werkzeug>=3.1.4",
]

[project.scripts]
store = "store.main:main"

[tool.uv.sources]
cl-ml-tools = { git = "https://github.com/cloudonlanapps/cl_ml_tools.git", rev = "main"  }
cl-server-shared = { git = "https://github.com/cloudonlanapps/cl_server_shared.git", rev = "main" }

[project.optional-dependencies]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.3.0",
]
all = [
    "store[dev]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/store"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
addopts = "--cov=store --cov-report=html --cov-report=term-missing --cov-fail-under=90"


[tool.coverage.run]
source = ["src/store"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "*/typings/*",
    "*/main.py"  # CLI entry point, not tested
]

[tool.coverage.report]
precision = 2
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
  "alembic/versions",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "F811", "F401", "UP",
    "F841",  # local variable assigned but never used
    "B018",  # useless expression
  ]
ignore = ["E501"]
